add - scale data using MinMaxScaler

--- a/src/Preprocesing.ipynb
+++ b/src/Preprocesing.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPRllzGkh7R2uEjQ6OfQtzC",
+      "authorship_tag": "ABX9TyMDU1cr0es/NYh/Gn+W0EbW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,13 +38,14 @@
     {
       "cell_type": "code",
       "source": [
+        "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt"
       ],
       "metadata": {
         "id": "4EicQS6DGoUX"
       },
-      "execution_count": 6,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -55,7 +56,7 @@
       "metadata": {
         "id": "OG4YL5xmGxwT"
       },
-      "execution_count": 7,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -67,7 +68,7 @@
       "metadata": {
         "id": "s373gJA0HAp4"
       },
-      "execution_count": 8,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -84,9 +85,9 @@
           "height": 281
         },
         "id": "bLZkODLbHeEE",
-        "outputId": "adba96c9-d893-4d3e-f658-2b853a8c70a5"
+        "outputId": "5abebc69-e404-487a-b8b3-cb7209970d12"
       },
-      "execution_count": 10,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -101,6 +102,49 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.preprocessing import MinMaxScaler\n",
+        "scaler = MinMaxScaler( feature_range=(0,1) )\n",
+        "df1 = scaler.fit_transform(np.array(df1).reshape(-1,1))"
+      ],
+      "metadata": {
+        "id": "Pgtr-FRHJmNp"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Explaination:\n",
+        "\n",
+        "---\n",
+        "\n",
+        "Here, we scale the price index between zero(0) and one(1). For this purpose we utilize the MinMaxScaler provided by the sklearn library.\n",
+        "We convert the data into one dimensional numpy array before feeding it to the scaler."
+      ],
+      "metadata": {
+        "id": "POCjTm9VOL6l"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "J2_wueaPOyft"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "i0Taif24Oxi1"
+      }
     }
   ]
 }
