add - train test split

--- a/src/Preprocesing.ipynb
+++ b/src/Preprocesing.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDU1cr0es/NYh/Gn+W0EbW",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyP9QH0xoULkwEDPA9wTWjCe"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/salimshrestha98/Stock-Price-Prediction-And-Forecasting-Using-Stacked-LSTM/blob/main/src/Preprocesing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -131,20 +120,77 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "**Train Test Split**\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "We have many ways to split the data into train and test sets.  \n",
+        "But, with time series data, we cannot split the data on random.  \n",
+        "So, here we take 65% of our data as train data and remaining data as test data."
+      ],
       "metadata": {
-        "id": "J2_wueaPOyft"
+        "id": "M7_kiTVNP31m"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "training_size = int(len(df1)*0.65)\n",
+        "test_size = len(df1) - training_size\n",
+        "train_data, test_data = df1[:training_size, :], df1[training_size:len(df1), :]"
+      ],
+      "metadata": {
+        "id": "o1OCJW8uQdEf"
       },
-      "execution_count": 16,
+      "execution_count": 17,
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "training_size,test_size"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9lGcKK02Q9_8",
+        "outputId": "fd5d6f61-2d34-4dca-e3b1-fdde6f3ca36b"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1553, 837)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
+      "source": [
+        "Now, we have 1553 instances in our training set and 837 instances in our test set."
+      ],
+      "metadata": {
+        "id": "FR105F4WRG7h"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "i0Taif24Oxi1"
-      }
+        "id": "WiLnpCBPRBAm"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
