add - create dataset using timesteps

--- a/src/Preprocesing.ipynb
+++ b/src/Preprocesing.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP9QH0xoULkwEDPA9wTWjCe"
+      "authorship_tag": "ABX9TyMkNSzy1t0jvVf9EmaecWxV"
     },
     "kernelspec": {
       "name": "python3",
@@ -184,10 +184,151 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Computing Timesteps\n",
+        "\n",
+        "---\n",
+        "\n",
+        "Timesteps are the number of previous values to use to predict the next value.\n",
+        "[See Example Here](https://prnt.sc/r8--zzZ_Pb2v)  \n",
+        "Now, we convert an array of values into a dataset matrix."
+      ],
+      "metadata": {
+        "id": "wSwMfUZGRwS9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def create_dataset( dataset, time_step=1 ):\n",
+        "  dataX, dataY = [], []\n",
+        "  for i in range( len(dataset) - time_step - 1 ):\n",
+        "    a = dataset[i:(i+time_step), 0]\n",
+        "    dataX.append(a)\n",
+        "    dataY.append(dataset[i + time_step, 0])\n",
+        "  return np.array(dataX), np.array(dataY)"
+      ],
+      "metadata": {
+        "id": "1HW5tFjUSUh7"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Suppose the initial dataset is as follows:  \n",
+        "`dataset = [10, 12, 14, 16, 18, 20]`  \n",
+        "And, the time step is 3:  \n",
+        "`time_step = 3`  \n",
+        "\n",
+        "Iteration 1:\n",
+        "```\n",
+        "i = 0\n",
+        "a = [10, 12, 14]\n",
+        "dataX = [[10, 12, 14]]\n",
+        "dataY = [16]\n",
+        "```\n",
+        "\n",
+        "Iteration 2:\n",
+        "```\n",
+        "i = 1\n",
+        "a = [12, 14, 16]\n",
+        "dataX = [[10, 12, 14], [12, 14, 16]]\n",
+        "dataY = [16, 18]\n",
+        "```\n",
+        "\n",
+        "Iteration 3:\n",
+        "```\n",
+        "i = 2\n",
+        "a = [14, 16, 18]\n",
+        "dataX = [[10, 12, 14], [12, 14, 16], [14, 16, 18]]\n",
+        "dataY = [16, 18, 20]\n",
+        "```\n",
+        "\n",
+        "So, finally we get:\n",
+        "```\n",
+        "x1   x2   x3  | o/p\n",
+        "10   12   14  | 16\n",
+        "12   14   16  | 18\n",
+        "14   16   18  | 20\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "8_fnYArsUmfu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "time_step = 100\n",
+        "X_train, y_train = create_dataset( train_data, time_step)\n",
+        "X_test, y_test = create_dataset( test_data, time_step)"
+      ],
+      "metadata": {
+        "id": "WiLnpCBPRBAm"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train.shape, y_train.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "73OQJz74XQc1",
+        "outputId": "f486d510-3351-4492-de5d-7758d2408297"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((1452, 100), (1452,))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_test.shape, y_test.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yUPlPTv_Xcie",
+        "outputId": "036fc4aa-d471-4bed-a41c-db8f26cd119a"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((736, 100), (736,))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "WiLnpCBPRBAm"
+        "id": "yq4wqtvUXeFg"
       },
       "execution_count": null,
       "outputs": []
