reshape data to feed into LSTM

--- a/src/Preprocesing.ipynb
+++ b/src/Preprocesing.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMkNSzy1t0jvVf9EmaecWxV"
+      "authorship_tag": "ABX9TyNUngg3kQUtzIvP7f9F9l3Q"
     },
     "kernelspec": {
       "name": "python3",
@@ -34,7 +34,7 @@
       "metadata": {
         "id": "4EicQS6DGoUX"
       },
-      "execution_count": 12,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -45,7 +45,7 @@
       "metadata": {
         "id": "OG4YL5xmGxwT"
       },
-      "execution_count": 13,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -57,7 +57,7 @@
       "metadata": {
         "id": "s373gJA0HAp4"
       },
-      "execution_count": 14,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -74,9 +74,9 @@
           "height": 281
         },
         "id": "bLZkODLbHeEE",
-        "outputId": "5abebc69-e404-487a-b8b3-cb7209970d12"
+        "outputId": "d87e64a5-282b-405c-c4eb-e0fa85212ae0"
       },
-      "execution_count": 15,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -102,7 +102,7 @@
       "metadata": {
         "id": "Pgtr-FRHJmNp"
       },
-      "execution_count": 16,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -145,7 +145,7 @@
       "metadata": {
         "id": "o1OCJW8uQdEf"
       },
-      "execution_count": 17,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -158,9 +158,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9lGcKK02Q9_8",
-        "outputId": "fd5d6f61-2d34-4dca-e3b1-fdde6f3ca36b"
+        "outputId": "75d6871d-bb07-4f86-940f-966df4118802"
       },
-      "execution_count": 18,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -170,7 +170,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 7
         }
       ]
     },
@@ -212,7 +212,7 @@
       "metadata": {
         "id": "1HW5tFjUSUh7"
       },
-      "execution_count": 19,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -269,7 +269,7 @@
       "metadata": {
         "id": "WiLnpCBPRBAm"
       },
-      "execution_count": 20,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -282,9 +282,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "73OQJz74XQc1",
-        "outputId": "f486d510-3351-4492-de5d-7758d2408297"
+        "outputId": "c2214ffe-5c43-45f7-ea86-d0639dca7579"
       },
-      "execution_count": 22,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -294,7 +294,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 18
         }
       ]
     },
@@ -308,9 +308,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yUPlPTv_Xcie",
-        "outputId": "036fc4aa-d471-4bed-a41c-db8f26cd119a"
+        "outputId": "b40c8462-14bf-4570-8c73-4067a78e5c8a"
       },
-      "execution_count": 23,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -320,18 +320,199 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Currently, our data is two dimensional.  \n",
+        "We need to reshape the input into three dimensions to feed into LSTM model.  \n",
+        "Dimension 1: Samples  \n",
+        "Dimension 2: Time Steps  \n",
+        "Dimension 3: Features  "
+      ],
+      "metadata": {
+        "id": "yLQM7yMwYEfE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"X_train before reshape: \")\n",
+        "print(X_train[0])"
+      ],
+      "metadata": {
+        "id": "DsUdBCgVYrnB",
+        "outputId": "07fc47a3-c1a5-40a9-f757-db4dba6cb2ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "X_train before reshape: \n",
+            "[0.00211004 0.00310299 0.00347535 0.00273063 0.0024824  0.00285475\n",
+            " 0.00260651 0.00285475 0.00297887 0.00335123 0.00322711 0.00310299\n",
+            " 0.00173768 0.00173768 0.00049648 0.00012412 0.00086884 0.\n",
+            " 0.         0.00024824 0.00148944 0.00198592 0.0012412  0.00099296\n",
+            " 0.00086884 0.00099296 0.0006206  0.0006206  0.00037236 0.00024824\n",
+            " 0.00012412 0.00099296 0.00024824 0.00074472 0.00086884 0.00086884\n",
+            " 0.00099296 0.00099296 0.00148944 0.00148944 0.00297887 0.00335123\n",
+            " 0.00359947 0.00397183 0.00471655 0.00533715 0.00533715 0.00744719\n",
+            " 0.00992958 0.0106743  0.00968134 0.0106743  0.01166726 0.01166726\n",
+            " 0.00893662 0.00806778 0.00657835 0.00459243 0.00570951 0.00719895\n",
+            " 0.00707483 0.0094331  0.00781954 0.00682659 0.00806778 0.00968134\n",
+            " 0.00633011 0.00446831 0.00670247 0.00781954 0.00806778 0.00794366\n",
+            " 0.00757131 0.00781954 0.00682659 0.00670247 0.00719895 0.00670247\n",
+            " 0.00622088 0.00858536 0.00842773 0.00700904 0.00622088 0.00858536\n",
+            " 0.00953116 0.01142274 0.01047695 0.01094984 0.0122109  0.01236853\n",
+            " 0.01142274 0.01094984 0.01079221 0.01079221 0.01079221 0.01173801\n",
+            " 0.01189564 0.01236853 0.01158037 0.01110748]\n"
+          ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "X_train = X_train.reshape(X_train.shape[0], X_train.shape[1], 1)\n",
+        "X_test = X_test.reshape(X_test.shape[0], X_test.shape[1], 1)"
+      ],
       "metadata": {
         "id": "yq4wqtvUXeFg"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"X_train after reshape: \")\n",
+        "print(X_train[0])"
+      ],
+      "metadata": {
+        "id": "l0UtHsoQY319",
+        "outputId": "e98f1280-d973-4122-8c93-b1e3d4e4d076",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "X_train after reshape: \n",
+            "[[0.00211004]\n",
+            " [0.00310299]\n",
+            " [0.00347535]\n",
+            " [0.00273063]\n",
+            " [0.0024824 ]\n",
+            " [0.00285475]\n",
+            " [0.00260651]\n",
+            " [0.00285475]\n",
+            " [0.00297887]\n",
+            " [0.00335123]\n",
+            " [0.00322711]\n",
+            " [0.00310299]\n",
+            " [0.00173768]\n",
+            " [0.00173768]\n",
+            " [0.00049648]\n",
+            " [0.00012412]\n",
+            " [0.00086884]\n",
+            " [0.        ]\n",
+            " [0.        ]\n",
+            " [0.00024824]\n",
+            " [0.00148944]\n",
+            " [0.00198592]\n",
+            " [0.0012412 ]\n",
+            " [0.00099296]\n",
+            " [0.00086884]\n",
+            " [0.00099296]\n",
+            " [0.0006206 ]\n",
+            " [0.0006206 ]\n",
+            " [0.00037236]\n",
+            " [0.00024824]\n",
+            " [0.00012412]\n",
+            " [0.00099296]\n",
+            " [0.00024824]\n",
+            " [0.00074472]\n",
+            " [0.00086884]\n",
+            " [0.00086884]\n",
+            " [0.00099296]\n",
+            " [0.00099296]\n",
+            " [0.00148944]\n",
+            " [0.00148944]\n",
+            " [0.00297887]\n",
+            " [0.00335123]\n",
+            " [0.00359947]\n",
+            " [0.00397183]\n",
+            " [0.00471655]\n",
+            " [0.00533715]\n",
+            " [0.00533715]\n",
+            " [0.00744719]\n",
+            " [0.00992958]\n",
+            " [0.0106743 ]\n",
+            " [0.00968134]\n",
+            " [0.0106743 ]\n",
+            " [0.01166726]\n",
+            " [0.01166726]\n",
+            " [0.00893662]\n",
+            " [0.00806778]\n",
+            " [0.00657835]\n",
+            " [0.00459243]\n",
+            " [0.00570951]\n",
+            " [0.00719895]\n",
+            " [0.00707483]\n",
+            " [0.0094331 ]\n",
+            " [0.00781954]\n",
+            " [0.00682659]\n",
+            " [0.00806778]\n",
+            " [0.00968134]\n",
+            " [0.00633011]\n",
+            " [0.00446831]\n",
+            " [0.00670247]\n",
+            " [0.00781954]\n",
+            " [0.00806778]\n",
+            " [0.00794366]\n",
+            " [0.00757131]\n",
+            " [0.00781954]\n",
+            " [0.00682659]\n",
+            " [0.00670247]\n",
+            " [0.00719895]\n",
+            " [0.00670247]\n",
+            " [0.00622088]\n",
+            " [0.00858536]\n",
+            " [0.00842773]\n",
+            " [0.00700904]\n",
+            " [0.00622088]\n",
+            " [0.00858536]\n",
+            " [0.00953116]\n",
+            " [0.01142274]\n",
+            " [0.01047695]\n",
+            " [0.01094984]\n",
+            " [0.0122109 ]\n",
+            " [0.01236853]\n",
+            " [0.01142274]\n",
+            " [0.01094984]\n",
+            " [0.01079221]\n",
+            " [0.01079221]\n",
+            " [0.01079221]\n",
+            " [0.01173801]\n",
+            " [0.01189564]\n",
+            " [0.01236853]\n",
+            " [0.01158037]\n",
+            " [0.01110748]]\n"
+          ]
+        }
+      ]
     }
   ]
 }
